[gd_scene load_steps=9 format=2]

[ext_resource path="res://6reji.gd" type="Script" id=1]
[ext_resource path="res://media/MPLUSRounded1c-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://SoundNovelText.tscn" type="PackedScene" id=3]
[ext_resource path="res://media/reji.png" type="Texture" id=4]
[ext_resource path="res://media/reji_tanuki.png" type="Texture" id=5]
[ext_resource path="res://media/reji_jiisan.png" type="Texture" id=6]
[ext_resource path="res://media/tanuki_behind_jiisan.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=1]
size = 27
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 2 )

[node name="6reji" type="Node2D"]
script = ExtResource( 1 )

[node name="pic" type="Node2D" parent="."]
modulate = Color( 0.65098, 0.65098, 0.65098, 1 )

[node name="reji" type="Sprite" parent="pic"]
position = Vector2( 640, 360 )
texture = ExtResource( 4 )

[node name="reji_tanuki" type="Sprite" parent="pic"]
position = Vector2( 613, 311 )
texture = ExtResource( 5 )

[node name="reji_jiisan" type="Sprite" parent="pic"]
visible = false
position = Vector2( 672, 106 )
texture = ExtResource( 6 )

[node name="tanuki_behind_jiisan" type="Sprite" parent="pic"]
visible = false
position = Vector2( 640, 360 )
texture = ExtResource( 7 )

[node name="SoundNovelText" parent="." instance=ExtResource( 3 )]

[node name="そこでたぬきは……" type="GridContainer" parent="."]
visible = false
margin_left = 80.0
margin_top = 80.0
margin_right = 495.0
margin_bottom = 174.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="1列からこっそり外れました。" type="Button" parent="そこでたぬきは……"]
margin_right = 415.0
margin_bottom = 45.0
focus_mode = 0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_hover = Color( 0, 0.572549, 1, 1 )
custom_colors/font_color_pressed = Color( 0, 0.572549, 1, 1 )
shortcut_in_tooltip = false
button_mask = 3
enabled_focus_mode = 0
text = "1.列からこっそり外れました。"
flat = true
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="2そのまま列に並ぶことにしました。" type="Button" parent="そこでたぬきは……"]
margin_top = 49.0
margin_right = 415.0
margin_bottom = 94.0
focus_mode = 0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_hover = Color( 0, 0.572549, 1, 1 )
custom_colors/font_color_pressed = Color( 0, 0.572549, 1, 1 )
shortcut_in_tooltip = false
button_mask = 3
enabled_focus_mode = 0
text = "2.そのまま列に並ぶことにしました。"
flat = true
align = 0
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="そこでたぬきは……/1列からこっそり外れました。" to="." method="_on_1_pressed"]
[connection signal="pressed" from="そこでたぬきは……/2そのまま列に並ぶことにしました。" to="." method="_on_2_pressed"]
